<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uiowa.dichha.mpplaybackspeed.MainActivity">

     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playback"
        android:text="@string/playback"
         android:layout_alignTop="@+id/pause"
         android:layout_toStartOf="@+id/theme" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:id="@+id/pause"
        android:layout_marginBottom="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/theme"
        android:id="@+id/theme"
        android:textColor="@color/theme_color"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/appTitle"
        android:id="@+id/appTitle"
        android:textSize="35dp"
        android:textColor="@color/appTitle_color"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_marginTop="30dp"
        android:src="@drawable/note_img"
        android:layout_below="@+id/theme"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed_spinner"
        android:prompt="@string/spinner_title"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next"
        android:layout_alignTop="@+id/pause"
        android:layout_toEndOf="@+id/theme" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/music_name"
        android:layout_below="@+id/speed_spinner"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
